# FL-Topology-Emulation

./: .gitignore  README.md  my_job.sh  pyproject.toml
Dataprocessing/: dataprocessing.py  experiment_fedavg_seed36836_metrics.csv  experiment_fedavg_seed42_metrics.csv  experiment_fedavgcycle_seed36836_metrics.csv  experiment_fedavgcycle_seed42_metrics.csv  experiment_fedprox_36836_metrics.csv  experiment_fedprox_seed42_metrics.csv  experiment_fedtree_seed36836_metrics.csv  experiment_fedtree_seed42_metrics.csv  experiment_scaffold_seed36836_metrics.csv  experiment_scaffold_seed42_metrics.csv
Dataprocessing/classification_reports/seed36836/: fedavgcycle(fixed)_seed36836_report.json  fedprox_seed36836_report.json  fedtree_seed36836_report.json  scaffold_seed36836_report.json
Dataprocessing/classification_reports/seed42/: fedavg_seed42_report.json  fedavgcycle(fixed)_seed42_report.json  fedprox_seed42_report.json  fedtree_seed42_report.json  (+1 more)
Dataprocessing/csv_report/: fedavg_seed36836_report.json.csv  fedavg_seed42_report.json.csv  fedavgcycle(fixed)_seed36836_report.json.csv  fedavgcycle(fixed)_seed42_report.json.csv  fedprox_seed36836_report.json.csv  fedprox_seed42_report.json.csv  fedtree_seed36836_report.json.csv  fedtree_seed42_report.json.csv  scaffold_seed36836_report.json.csv  scaffold_seed42_report.json.csv
dataset/: dataset.py  datasetV2.py
pytorchexample/: client_app.py  custom_strategy.py  fedavg_seed36836_report.json  processing.py  report.json  server_app.py  task.py
pytorchexample/dataset/: dataset.py
pytorchexample/models/: xception.py
